fixed some spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ h1 {
 
 .cSection {
     text-align: left;
-    margin-bottom: 25%;
+    margin-bottom: 5%;
 }
 
 .scores,
